# substrate-erc-pallet

./: Cargo.toml  README.md
pallets/ERC20/: Cargo.toml
pallets/ERC20/src/: functions.rs  lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
